<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Name -->
    <string name="app_name">Sensormind</string>

    <!-- Titles of activities -->
    <string name="title_activity_device_capabilities">Device Capabilities</string>
    <string name="title_activity_configuration">Sampling Configuration</string>

    <!-- default values -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_device">Add device</string>

    <!-- TODO find right place for these -->
    <string name="main_title">Use the controls below</string>
    <string name="action_device_capabilities">Device Capabilities</string>
    <string name="title_activity_schedule_service">Schedule Service</string>
    <string name="supported_sensors">Sensors status</string>
    <string name="start_button">Start grabbing!</string>
    <string name="stop_button">Stop grabbing!</string>
    <string name="action_test">TASTO DI TEST</string>
    <string name="action_add_new_service">Add new service</string>
    <string name="title_sensor_background_service">Sensor Background Service</string>
    <string name="action_log_in">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_log_in">Login</string>
    <string name="title_activity_register">Registration</string>

    <!-- Configuration Activity -->
    <!-- <string name="conf_help">Set up a name for this sampling configuration.\nRemember to use different names for each configuration.</string> -->
    <string name="conf_help">Configure the service</string>
    <string name="conf_name">Name </string>
    <string name="conf_samp">Sampling time</string>
    <string name="conf_window">Window amplitude</string> <!-- TODO trovare nome migliore -->
    <string name="conf_gps">Attach location</string>
    <string name="defaultNum5">5</string>
    <string name="conf_saveButton">Save</string>
    <string name="conf_deactivateButton">Delete</string>
    <string name="conf_sec">sec</string>
    <string name="conf_min">min</string>

    <string name="conf_ms">millis</string>
    <string name="conf_hour">hour</string>
    <string name="restore_defaults">Restore</string>
    <string name="conf_load">Load</string>
    <string name="conf_delete">Delete</string>
    <string name="conf_save_no_run">Save</string>
    <string name="add_device_text">Item checked are already sampling</string>
    <string name="conf_stream">Streaming</string>
    <string name="conf_window_description">Add timestamp every 2 samples.</string>

    <string name="title_activity_webview">WebviewActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="title_activity_disclaimer">DisclaimerActivity</string>
    <string name="dummy_content">Questo è il \n disclaimer!</string>
    <string name="register"><u>I dont have an account, register me!</u></string>
    <string name="conf_feed">Feed</string>
    <string name="conf_mqtt_topic">MQTT Topic:</string>


</resources>
